build(配置): 修改package.json中的version字段

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "imagemin-gifsicle",
-	"version": "7.0.0",
+	"name": "@imagemin/gifsicle",
+	"version": "7.0.0-telking",
 	"description": "Imagemin plugin for Gifsicle",
 	"license": "MIT",
 	"repository": "imagemin/imagemin-gifsicle",
