--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@imagemin/gifsicle",
-	"version": "7.0.0-telking",
+	"name": "@telking/gifsicle",
+	"version": "7.0.0",
 	"description": "Imagemin plugin for Gifsicle",
 	"license": "MIT",
 	"repository": "imagemin/imagemin-gifsicle",
@@ -27,7 +27,7 @@
 	],
 	"dependencies": {
 		"execa": "^4.0.0",
-		"gifsicle": "^5.0.0",
+		"@telking/gifsicle": "^5.0.0-telking",
 		"is-gif": "^3.0.0"
 	},
 	"devDependencies": {
