build(配置): name的值imagemin-gifsicle -> @telking/imagemin-gifsicle

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@telking/gifsicle",
+	"name": "@telking/imagemin-gifsicle",
 	"version": "7.0.0",
 	"description": "Imagemin plugin for Gifsicle",
 	"license": "MIT",
