--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "@telking/imagemin-gifsicle",
 	"version": "7.0.0",
+	"author": {
+		"name": "幸焕光",
+		"email": "xhg1945454120@gmail.com",
+		"url": "github.com/GSZS"
+	},
 	"description": "Imagemin plugin for Gifsicle",
 	"license": "MIT",
 	"repository": "imagemin/imagemin-gifsicle",
